# object_pose_estimation

./: CMakeLists.txt  README.md  package.xml
config/: config.yaml
include/: object_pose_estimation.h
pcl_ransac/: object_pose_estimation_ros.cpp  random_sample_consensus.cpp
resources/: test.bag
src/: obj_pose_estimation.cpp  object_pose_estimation.cpp  object_pose_estimation_ros.cpp  scan2pcd.cpp
